--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <body id="main">
         <header>
-            <nav class="navbar navbar-expand-lg bg-body-transparent">
+            <nav class="navbar navbar-dark navbar-expand-lg bg-body-transparent">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html"><img src="/imgs/beachlogo.jpg" id="logo"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,20 +27,25 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link text-white active" aria-current="page" href="#">To-Do</a>
-        <a class="nav-link text-white" href="#">Features</a>
-        <a class="nav-link text-white" href="#">Pricing</a>
+        <a class="nav-link text-white active" aria-current="page" href="resort.html">Resort</a>
+        <a class="nav-link text-white" href="activities.html">Activities</a>
       </div>
     </div>
   </div>
 </nav>
         </header>
 
-        <main>
-          <div id="mainwords">
-Punta Cana
+    <main>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col d-flex justify-content-center">
+            <div id="mainwords">
+                Punta Cana
+            </div>
           </div>
-        </main>
+        </div>
+      </div>
+    </main>
         
         <footer>
             <!-- place footer here -->
