added another page that I didn't work on and finished the activites, amost done w resort

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <div class="navbar-nav">
         <a class="nav-link text-white active" aria-current="page" href="resort.html">Resort</a>
         <a class="nav-link text-white" href="activities.html">Activities</a>
+        <a class="nav-link text-white" href="more.html">More</a>
       </div>
     </div>
   </div>
