--- a/activities.html
+++ b/activities.html
@@ -29,6 +29,7 @@
       <div class="navbar-nav">
         <a class="nav-link text-white active" aria-current="page" href="resort.html">Resort</a>
         <a class="nav-link text-white" href="activities.html">Activities</a>
+        <a class="nav-link text-white" href="more.html">More</a>
       </div>
     </div>
   </div>
@@ -36,7 +37,38 @@
         </header>
 
     <main>
-    
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 d-flex justify-content-center align-items-center">
+            <h1 id="headings">Activities</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
+            <ul>
+              <li>
+                stuff
+              </li>
+              <li>
+                stuff
+              </li>
+              <li>
+                stuff
+              </li>
+              <li>
+                stuff
+              </li>
+              <li>
+                stuff
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/G2l7l3s38a4?si=cfIGiop52pMAlJcr" title="YouTube video player" frameborder="0" allow="accelerometer; 
+            autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
     </main>
         
         <footer>
