--- a/resort.html
+++ b/resort.html
@@ -29,6 +29,7 @@
       <div class="navbar-nav">
         <a class="nav-link text-white active" aria-current="page" href="resort.html">Resort</a>
         <a class="nav-link text-white" href="activities.html">Activities</a>
+        <a class="nav-link text-white" href="more.html">More</a>
       </div>
     </div>
   </div>
@@ -36,7 +37,58 @@
         </header>
 
     <main>
-      
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 d-flex justify-content-center align-items-center">
+            <h1 id="headings">Resort</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 col-lg-6 d-flex justify-content-center align-items-center id="resortstuff">
+           <h3>blah blah blah blah blah blah blah 
+            blah blah blah blah blah blah blah blah 
+           blah blah blah blah blah blah blah blah 
+           blah blah blah blah blah blah blah</h3>
+          </div>
+          <div class="col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
+            <div id="carouselExampleDark" class="carousel carousel slide">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                  <img src="/imgs/oceanblueresort.jpg" class="d-block w-100">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Ocean Blue Resort</h5>
+                  </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                  <img src="/imgs/hyattzilararesort.jpg" class="d-block w-100" >
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Hyatt Zilara Resort</h5>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="/imgs/secretsroyalresort.jpg" class="d-block w-100" >
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Secrets Royal Resort</h5>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
         
         <footer>
