footer is broken

--- a/activities.html
+++ b/activities.html
@@ -27,9 +27,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link text-white active" aria-current="page" href="resort.html">Resort</a>
-        <a class="nav-link text-white" href="activities.html">Activities</a>
-        <a class="nav-link text-white" href="more.html">More</a>
+        <a class="nav-link text-white active fs-3" aria-current="page" href="resort.html">Resort</a>
+        <a class="nav-link text-white fs-3" href="activities.html">Activities</a>
       </div>
     </div>
   </div>
@@ -44,22 +43,22 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
+          <div class="col-md-12 col-lg-6 d-flex justify-content-center align-items-center fs-2">
             <ul>
               <li>
-                stuff
+                Buy stuff
               </li>
               <li>
-                stuff
+                Go on an excursion
               </li>
               <li>
-                stuff
+                Walk around and try and go on the golf carts
               </li>
               <li>
-                stuff
+                Go to the pool
               </li>
               <li>
-                stuff
+                Bully your little brother because why not
               </li>
             </ul>
           </div>
@@ -71,8 +70,10 @@
       </div>
     </main>
         
-        <footer>
-    
+        <footer class="bg-white">
+        <div d-flex justify-content-center align-items-center mx-3>
+          Made by James Carmichael (Better than Hank)
+        </div>
         </footer>
 
         <script
