--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link text-white active" aria-current="page" href="resort.html">Resort</a>
-        <a class="nav-link text-white" href="activities.html">Activities</a>
-        <a class="nav-link text-white" href="more.html">More</a>
+        <a class="nav-link text-white active fs-3" aria-current="page" href="resort.html">Resort</a>
+        <a class="nav-link text-white fs-3" href="activities.html">Activities</a>
       </div>
     </div>
   </div>
