--- a/resort.html
+++ b/resort.html
@@ -27,9 +27,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link text-white active" aria-current="page" href="resort.html">Resort</a>
-        <a class="nav-link text-white" href="activities.html">Activities</a>
-        <a class="nav-link text-white" href="more.html">More</a>
+        <a class="nav-link text-white active fs-3" aria-current="page" href="resort.html">Resort</a>
+        <a class="nav-link text-white fs-3" href="activities.html">Activities</a>
       </div>
     </div>
   </div>
@@ -44,11 +43,17 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 col-lg-6 d-flex justify-content-center align-items-center id="resortstuff">
-           <h3>blah blah blah blah blah blah blah 
-            blah blah blah blah blah blah blah blah 
-           blah blah blah blah blah blah blah blah 
-           blah blah blah blah blah blah blah</h3>
+          <div class="col-md-12 col-lg-6 d-flex justify-content-center align-items-center fs-3" id="resortstuff">
+            <ol>
+              <li>
+                Ocean Blue is the one I stayed at, it's pretty big and there's not a lot of stuff to do but I was with my family friends so it was good, I would recommend &#128077
+              <li>
+                Hyatt Zilara Cap Cana is the newest all-inclusive resort exclusively for adults in the beautiful gated community of Cap Cana. Located on the sought-after shores of Juanillo Beach, Hyatt Zilara Cap Cana is a tropical paradise where guests can indulge in all-inclusive luxury surrounded by local culture, magnificent ocean views and incredible amenities.
+              </li>
+              <li>
+                Ideally situated on the picturesque palm-studded, sugar white Playa Bavaro beach on the eastern coastline of the Dominican Republic, Secrets Royal Beach Punta Cana offers adults all the privileges of Unlimited-Luxury.
+              </li>
+            </ol>
           </div>
           <div class="col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
             <div id="carouselExampleDark" class="carousel carousel slide">
@@ -60,19 +65,19 @@
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
                   <img src="/imgs/oceanblueresort.jpg" class="d-block w-100">
-                  <div class="carousel-caption d-none d-md-block">
+                  <div class="carousel-caption d-none d-md-block fs-3">
                     <h5>Ocean Blue Resort</h5>
                   </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
                   <img src="/imgs/hyattzilararesort.jpg" class="d-block w-100" >
-                  <div class="carousel-caption d-none d-md-block">
+                  <div class="carousel-caption d-none d-md-block fs-3">
                     <h5>Hyatt Zilara Resort</h5>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="/imgs/secretsroyalresort.jpg" class="d-block w-100" >
-                  <div class="carousel-caption d-none d-md-block">
+                  <div class="carousel-caption d-none d-md-block fs-3">
                     <h5>Secrets Royal Resort</h5>
                   </div>
                 </div>
