--- a/activities.html
+++ b/activities.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="https://use.typekit.net/drl5ptu.css">
     </head>
 
-    <body class="body-bg">
+    <body class="body-bg d-flex flex-column min-vh-100">
         <header>
             <nav class="navbar navbar-dark navbar-expand-lg bg-body-transparent">
   <div class="container-fluid">
@@ -70,9 +70,12 @@
       </div>
     </main>
         
-        <footer class="bg-white">
-        <div d-flex justify-content-center align-items-center mx-3>
+        <footer class="mt-auto bg-white margin-auto-0">
+        <div class="d-flex justify-content-center align-items-center mx-3">
           Made by James Carmichael (Better than Hank)
+        </div>
+        <div class="d-flex justify-content-center align-items-center mx-3">
+          <a href="https://www.godominicanrepublic.com">Punta Cana Website</a>
         </div>
         </footer>
 
