--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
       </div>
     </main>
         
-        <footer>
-            <!-- place footer here -->
-        </footer>
+    <footer class="mt-auto bg-white margin-auto-0">
+      <div class="d-flex justify-content-center align-items-center mx-3">
+        Made by James Carmichael (Better than Hank)
+      </div>
+      <div class="d-flex justify-content-center align-items-center mx-3">
+        <a href="https://www.godominicanrepublic.com">Punta Cana Website</a>
+      </div>
+      </footer>
 
         <!-- Bootstrap JavaScript Libraries -->
         <script
