--- a/resort.html
+++ b/resort.html
@@ -96,9 +96,14 @@
       </div>
     </main>
         
-        <footer>
-
-        </footer>
+    <footer class="mt-auto bg-white margin-auto-0">
+      <div class="d-flex justify-content-center align-items-center mx-3">
+        Made by James Carmichael (Better than Hank)
+      </div>
+      <div class="d-flex justify-content-center align-items-center mx-3">
+        <a href="https://www.godominicanrepublic.com">Punta Cana Website</a>
+      </div>
+      </footer>
 
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
