i think the pics r good

--- a/resort.html
+++ b/resort.html
@@ -21,7 +21,7 @@
         <header>
             <nav class="navbar navbar-dark navbar-expand-lg bg-body-transparent">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html"><img src="/imgs/beachlogo.jpg" id="logo"></a>
+    <a class="navbar-brand" href="index.html"><img src="imgs/beachlogo.jpg" id="logo"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -64,19 +64,19 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                  <img src="/imgs/oceanblueresort.jpg" class="d-block w-100">
+                  <img src="imgs/oceanblueresort.jpg" class="d-block w-100">
                   <div class="carousel-caption d-none d-md-block fs-3">
                     <h5>Ocean Blue Resort</h5>
                   </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                  <img src="/imgs/hyattzilararesort.jpg" class="d-block w-100" >
+                  <img src="imgs/hyattzilararesort.jpg" class="d-block w-100" >
                   <div class="carousel-caption d-none d-md-block fs-3">
                     <h5>Hyatt Zilara Resort</h5>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="/imgs/secretsroyalresort.jpg" class="d-block w-100" >
+                  <img src="imgs/secretsroyalresort.jpg" class="d-block w-100" >
                   <div class="carousel-caption d-none d-md-block fs-3">
                     <h5>Secrets Royal Resort</h5>
                   </div>
